Fix .discover visibility

--- a/css/style.scss
+++ b/css/style.scss
@@ -164,7 +164,6 @@ p {
     z-index: 3;
     color: $basicColor;
     position: absolute;
-    display: block;
     top: 50%;
     right: 50%;
     -webkit-transform: translate(50%, -50%);
